syntax = "proto3";

package balance;

service Balance {
    rpc GetBalance (Ping) returns (BalanceReply) {}
}

message Ping {
    string Ping = 1;
}

message BalanceReply {
    int64 Amount = 1;
}